N°2847 - Input : Fix vertical alignment and horizontal padding

--- a/css/backoffice/components/input/_input.scss
+++ b/css/backoffice/components/input/_input.scss
@@ -11,8 +11,8 @@ $ibo-input--color: $ibo-color-grey-900 !default;
 $ibo-input--background-color: $ibo-color-white-100 !default;
 $ibo-input--border-color: $ibo-color-grey-500 !default;
 
-$ibo-input--padding-x: 0px !default;
-$ibo-input--padding-y: 5px !default;
+$ibo-input--padding-x: 10px !default;
+$ibo-input--padding-y: 0px !default;
 
 $ibo-input--border-radius: $ibo-border-radius-300 !default;
 
@@ -27,21 +27,23 @@ $ibo-input-wrapper--is-error--background-color: $ibo-color-grey-300 !default;
 $ibo-input-wrapper--is-error--border-color: $ibo-color-red-600 !default;
 $ibo-field-validation: $ibo-color-red-700 !default;
 .ibo-input{
+	@extend %ibo-vertically-centered-content;
 	height: $ibo-input--height;
 	width: $ibo-input--width;
 	background-color: $ibo-input--background-color;
 	color: $ibo-input--color;
-	padding: $ibo-input--padding-x $ibo-input--padding-y;
+	padding: $ibo-input--padding-y $ibo-input--padding-x;
 	border: 1px solid $ibo-input--border-color;
 	border-radius: $ibo-input--border-radius;
+
 	&:focus{
 		border: 1px solid $ibo-input--focus--border-color;
 	}
-	&::placeholder{
-		color: $ibo-input--placeholder--color;
-	}
 	&:disabled{
 		background-color: $ibo-input--disabled--background-color;
+		color: $ibo-input--placeholder--color;
+	}
+	&::placeholder{
 		color: $ibo-input--placeholder--color;
 	}
 }
